# uav-usv-experiment-platform

./: .gitignore  AGENT.md  CHANGELOG.md  README.md
catkin_ws_src/platform_interface_ros1/: CMakeLists.txt  package.xml
catkin_ws_src/platform_interface_ros1/launch/: platform_interface_ros1.launch
catkin_ws_src/platform_interface_ros1/scripts/: platform_truth_bridge.py
catkin_ws_src/vrx_gazebo/models/robotx_2018_qualifying_avoid_obstacles_buoys/: model.sdf
catkin_ws_src/vrx_gazebo/worlds/: example_course.world.xacro
catkin_ws_src/wamv_description/models/tag/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
catkin_ws_src/wamv_description/models/tag/meshes/: tag.dae
catkin_ws_src/wamv_description/urdf/: wamv_base.urdf.xacro
docs/: BASELINE_ACCEPTANCE.md  FRAME_CONVENTION.md  MIXED_ROS1_ROS2_ARCHITECTURE.md
overlays/PX4_Firmware/launch/: sandisland.launch
overlays/PX4_Firmware/scripts/: px4
overlays/XTDrone/control/: usv_drone_mission.py
overlays/XTDrone/sitl_config/launch/: outdoor2_precision_landing.launch
ros2_research_ws_src/controller_interface/: README.md  package.xml
ros2_research_ws_src/controller_interface/controller_interface/: px4_offboard_bridge_node.py  reference_mux_node.py  tracking_controller_node.py
ros2_research_ws_src/experiment_manager/: README.md  package.xml  setup.py
ros2_research_ws_src/experiment_manager/config/: scenario_1_static_ground_qr.yaml  scenario_2_ground_moving_qr.yaml  scenario_3_maritime_usv_qr.yaml
ros2_research_ws_src/experiment_manager/experiment_manager/: scenario_runner.py
ros2_research_ws_src/joint_bringup/: README.md  package.xml  setup.py
ros2_research_ws_src/joint_bringup/config/: calm_truth.yaml  moderate_truth.yaml
ros2_research_ws_src/joint_bringup/launch/: baseline_minimal.launch.py  mission_stack_full.launch.py  mission_stack_minimal.launch.py  scenario_1_static_ground_qr.launch.py  scenario_2_ground_moving_qr.launch.py  scenario_3_maritime_usv_qr.launch.py  stage1_joint.launch.py
ros2_research_ws_src/landing_decision/: package.xml
ros2_research_ws_src/landing_decision/landing_decision/: decision_advisory_node.py  window_status_node.py
ros2_research_ws_src/landing_guidance/: package.xml
ros2_research_ws_src/landing_guidance/landing_guidance/: stage_reference_node.py
ros2_research_ws_src/metrics_evaluator/: README.md  package.xml  setup.py
ros2_research_ws_src/metrics_evaluator/metrics_evaluator/: frame_audit_node.py  geometry_consistency_node.py  summary_writer.py
ros2_research_ws_src/mission_manager/: package.xml
ros2_research_ws_src/mission_manager/mission_manager/: phase_manager_node.py
ros2_research_ws_src/mission_stack_msgs/: CMakeLists.txt  README.md  package.xml
ros2_research_ws_src/mission_stack_msgs/msg/: ControllerCommand.msg  ControllerReference.msg  DeckState.msg  ExperimentEvent.msg  ExperimentRunStatus.msg  GuidanceReference.msg  LandingDecisionStatus.msg  LandingWindowStatus.msg  LandingZoneState.msg  MetricsSummary.msg  MissionStatus.msg  PlannerStatus.msg  PlatformState.msg  ReferenceTrajectory.msg  ReferenceTrajectoryPoint.msg  RelativeState.msg  SafetyStatus.msg  ScenarioProfile.msg  TerminalTargetSpec.msg  TouchdownEvent.msg  TouchdownState.msg  UavState.msg
ros2_research_ws_src/platform_interface/: README.md  package.xml  setup.cfg  setup.py
ros2_research_ws_src/platform_interface/platform_interface/: platform_landing_zone_state_node.py  platform_truth_ingest_node.py
ros2_research_ws_src/platform_interface/platform_interface/transitional/: __init__.py  platform_uav_truth_provider_node.py
ros2_research_ws_src/relative_estimation/: package.xml
ros2_research_ws_src/relative_estimation/relative_estimation/: active_state_mux_node.py  truth_relative_state_node.py
ros2_research_ws_src/safety_manager/: package.xml
ros2_research_ws_src/safety_manager/safety_manager/: reference_filter_node.py  safety_monitor_node.py
ros2_research_ws_src/touchdown_manager/: package.xml
ros2_research_ws_src/touchdown_manager/touchdown_manager/: contact_monitor_node.py
ros2_research_ws_src/trajectory_planner/: README.md  package.xml  setup.py
ros2_research_ws_src/trajectory_planner/config/: planner_baseline.yaml  planner_chance_constrained.yaml  planner_learning_augmented.yaml  planner_moving_target.yaml  planner_tube_based.yaml
ros2_research_ws_src/trajectory_planner/trajectory_planner/: moving_deck_planner_node.py
scripts/: apply_overlay.sh  bootstrap.sh  bootstrap_mixed_stack.sh  ensure_ros1_controller_deps.sh  run_chain_validation.sh  run_mission.sh  run_ros1_bridge.sh  run_ros1_platform_interface.sh  run_ros1_world.sh  run_ros2_research.sh  run_sim.sh  run_ugv_motion_baseline.sh  scenario_world_profiles.sh  stop_platform.sh
