<?xml version="1.0"?>
<package format="3">
  <name>experiment_manager</name>
  <version>0.0.1</version>
  <description>Scenario metadata and run-directory management for baseline moving-deck landing experiments.</description>

  <maintainer email="jia@example.com">jia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mission_stack_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
