<?xml version="1.0"?>
<package format="3">
  <name>joint_bringup</name>
  <version>0.0.1</version>
  <description>Launch entry points for the mixed ROS1/ROS2 UAV-USV research stack.</description>

  <maintainer email="jia@example.com">jia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>platform_interface</exec_depend>
  <exec_depend>experiment_manager</exec_depend>
  <exec_depend>landing_decision</exec_depend>
  <exec_depend>landing_guidance</exec_depend>
  <exec_depend>metrics_evaluator</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>relative_estimation</exec_depend>
  <exec_depend>safety_manager</exec_depend>
  <exec_depend>touchdown_manager</exec_depend>
  <exec_depend>trajectory_planner</exec_depend>
  <exec_depend>mission_stack_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
