<?xml version="1.0"?>
<package format="3">
  <name>mission_manager</name>
  <version>0.0.1</version>
  <description>Mission-phase ownership and transitions for the ROS 2 research layer.</description>

  <maintainer email="jia@example.com">jia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>mission_stack_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
